public/stylesheets/index.css
iframe{
  width:300%;
  height:300%;
      -ms-zoom: 0.333333;
    -ms-transform-origin: 0 0;
    -moz-transform: scale(0.333333);
    -moz-transform-origin: 0px 50px;
    -o-transform: scale(0.333333);
    -o-transform-origin: 0px 50px;
    -webkit-transform: scale(0.333333);
    -webkit-transform-origin: 0 0;
}
.workspace{
  position:relative;
  display:block;
}
.computer {
  display:inline-block;
    position: relative;
    -webkit-perspective: 150px; /* Chrome, Safari, Opera  */
    perspective: 150px;
}
.computer > *{
    position: absolute;
}

.first{

  margin-left:400px;
  margin-top:115px;
}
.first .screen{
width: 235px;
height: 155px;
background: white;
border: 12px solid #A4A4A4;
border-radius: 10px 10px 0 0;
}
.first .stem{
  left:50%;
  position:relative;
margin-left: -148px;
width: 296px;
height: 7px;
  border-radius: 0 0 20px 20px;
background: #BDBDBD;
}
.first .stem:before {
content: "";
position: absolute;
width: 42px;
height: 3px;
left: 50%;
top: 0;
margin-left: -21px;
background: #D8D8D8;
}
.second .screen{
  width:420px;
  height:240px;
  background-color:white;
  border:20px solid #A4A4A4;
  border-radius:5px;
}
.second .stem{
  position:absolute;
  left:50%;
  margin-left:-50px;
  background-color:#BDBDBD;
  width:100px;
  height:10px;
}
.second .base{
  position:absolute;
  width:200px;
  left:50%;
  margin-top:10px;
  margin-left:-100px;
  height:10px;
  background-color:#AAAAAA;
}

